# jjc

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: development-plan.md  merge-editor-analysis-2026-07-05.md  phase-2-development-plan.md  phase-3-development-plan.md  phase-4-development-plan.md
src/: app.rs  buffer.rs  cli.rs  config.rs  diff.rs  doctor.rs  editor.rs  input.rs  lib.rs  main.rs  merge.rs  render.rs  scroll.rs  syntax.rs  theme.rs  vim.rs
tests/: diff_tree_entries.rs  merge_markers.rs  smoke.rs  tty.rs
