[package]
name = "jjc"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
similar = "2.7"
toml = "1.1"
tree-sitter = "0.26"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-go = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-json = "0.24"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
