[package]
name = "jjc"
version = "0.1.0"
edition = "2024"
rust-version = "1.93.1"
description = "A terminal-native commit, diff, and merge editor for Jujutsu"
license = "MIT"
repository = "https://github.com/nshcr/jjc"
readme = "README.md"
keywords = ["jujutsu", "jj", "tui", "editor", "version-control"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
similar = "2.7"
toml = "1.1"
tree-sitter = "0.26"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-go = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-json = "0.24"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
unicode-segmentation = "1.13"
unicode-width = "0.2"
